@@ -6,9 +6,9 @@
 
   <!ENTITY dhcpcd-download-http "http://download.berlios.de/dhcpcd/dhcpcd-&dhcpcd-version;.tar.bz2">
   <!ENTITY dhcpcd-download-ftp  "ftp://ftp.osuosl.org/pub/gentoo/distfiles/dhcpcd-&dhcpcd-version;.tar.bz2">
-  <!ENTITY dhcpcd-md5sum        "ec91c33b6d9cb46a42f9564e573fd249">
-  <!ENTITY dhcpcd-size          "123 KB">
-  <!ENTITY dhcpcd-buildsize     "1.2 MB">
+  <!ENTITY dhcpcd-md5sum        "e9100e53f64ca1f9fb0d392c3a623738">
+  <!ENTITY dhcpcd-size          "32.5 KB">
+  <!ENTITY dhcpcd-buildsize     "0.3 MB">
   <!ENTITY dhcpcd-time          "less than 0.1 SBU">
 ]>
 
@@ -67,15 +67,13 @@
     <para>Install <application>dhcpcd</application> by running the following
     commands:</para>
 
-<screen><userinput>./configure --prefix="" --mandir=/usr/share/man &amp;&amp;
-make</userinput></screen>
+<screen><userinput>make</userinput></screen>
 
     <para>This package does not come with a test suite.</para>
 
     <para>Now, as the <systemitem class="username">root</systemitem> user:</para>
 
-<screen role="root"><userinput>make install &amp;&amp;
-chmod -v 754 /etc/dhcpc/dhcpcd.exe</userinput></screen>
+<screen role="root"><userinput>make install</userinput></screen>
 
   </sect2>
 
@@ -102,10 +100,10 @@ chmod -v 754 /etc/dhcpc/dhcpcd.exe</userinput></screen>
     <sect3 id="dhcpcd-config">
       <title>Config Files</title>
 
-      <para><filename>/etc/dhcpc/dhcpcd.exe</filename></para>
+      <para><filename>/etc/dhcpcd.sh</filename></para>
 
       <indexterm zone="dhcpcd dhcpcd-config">
-        <primary sortas="e-etc-dhcpc">/etc/dhcpc/dhcpcd.exe</primary>
+        <primary sortas="e-etc-dhcpc">/etc/dhcpcd.sh</primary>
       </indexterm>
 
     </sect3>
@@ -127,9 +125,11 @@ chmod -v 754 /etc/dhcpc/dhcpcd.exe</userinput></screen>
 
       <para>Whenever <command>dhcpcd</command> configures or shuts down
       a network interface, it executes the script
-      <filename>/etc/dhcpc/dhcpcd.exe</filename>. This script can be
+      <filename>/etc/dhcpcd.sh</filename>. This script can be
       customized to perform additional actions for the network interface.
-      See the man page of <command>dhcpcd</command> for more details.</para>
+      See the man page of <command>dhcpcd</command> for more details. An
+      example file is shipped in the tarball which can be used to send
+      the interface details to syslog.</para>
 
       <para id="dhcpcd-config2">Finally, as the <systemitem
       class="username">root</systemitem> user create the
@@ -198,7 +198,7 @@ EOF</userinput></screen>
       <seglistitem>
         <seg>dhcpcd</seg>
         <seg>None</seg>
-        <seg>/etc/dhcpc and /var/lib/dhcpc</seg>
+        <seg>None</seg>
       </seglistitem>
     </segmentedlist>
 
