@@ -48,6 +48,9 @@
           <para>[dnicholson] - Fixed app-defaults references in xterm. Closes
           #2362. Reported by laxy.</para>
         </listitem>
+        <listitem>
+          <para>[dnicholson] - Updated to dhcpcd-3.0.17.</para>
+        </listitem>
       </itemizedlist>
     </listitem>
 
